--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "~1.0",
         "paulvl/backup": "3.*",
         "pragmarx/tracker": "^3.2",
-        "tcg/voyager": "^1.0"
+        "tcg/voyager": "^1.0",
+        "roumen/sitemap": "2.6.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
