--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,15 @@
     "require": {
         "php": ">=5.6.4",
         "artesaos/seotools": "^0.10.0",
+        "barryvdh/laravel-debugbar": "~2.4",
         "devdojo/chatter": "0.2.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "paulvl/backup": "3.*",
         "pragmarx/tracker": "^3.2",
-        "tcg/voyager": "^1.0",
-        "roumen/sitemap": "2.6.*"
+        "predis/predis": "^1.1",
+        "roumen/sitemap": "2.6.*",
+        "tcg/voyager": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
